src/test/deca/syntax/valid/decl_plusieurs_variables_meme_ligne.deca
// Description:
//    on déclare plusieurs variables sur la même ligne
//
// Resultats:
//    ok

{ int x,y,z ;}
