src/test/deca/syntax/invalid/decl_plusieurs_variables_meme_ligne_sans_virgule.deca
// Description:
//    on déclare plusieurs variables sur la même ligne sans les séparer par des virgules
//
// Resultats:
//    Erreur de syntaxe
//    ligne 8 : "extraneous input 'y' expecting {',', ';'}"

{ int x y ;}
